# nvim-setup

./: Cargo.toml  rust-toolchain.toml  test_telegram.txt
.cargo/: config.toml
src/: main.rs
