[package]
name = "p1-reading-test"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.1.0", features =  ["defmt", "time-driver-any", "stm32l476rg", "memory-x", "unstable-pac", "exti"]}
embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1.1"
embedded-io-async = "0.6.1"

heapless = "0.8.0"
alloc-cortex-m = "0.4.4"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

[profile.dev]
opt-level = 1
overflow-checks = false
# panic = "abort"

[profile.release]
opt-level = "z"
debug = "full"
lto = "fat"
codegen-units = 1
overflow-checks = false
#
